Replaced JNode getDeclForChildId() with ResolveDeclForChildId class